[gd_scene load_steps=9 format=3 uid="uid://dwc7eqoxiw1xr"]

[ext_resource type="Script" path="res://GameOver/gameover.gd" id="1_og03k"]
[ext_resource type="Texture2D" uid="uid://d1j1etiq2gwcl" path="res://Menu/Background.png" id="2_w0tjb"]
[ext_resource type="Texture2D" uid="uid://cfigw706b8f4p" path="res://GameOver/Retry.png" id="3_shpbi"]
[ext_resource type="Texture2D" uid="uid://w5bba1pqjbn" path="res://GameOver/Retry_pressed.png" id="4_1d48x"]
[ext_resource type="Texture2D" uid="uid://c60t5xbb0oj6m" path="res://Menu/Quit.png" id="5_usopq"]
[ext_resource type="Texture2D" uid="uid://7u21f0qj6l57" path="res://Menu/Quit_pressed.png" id="6_f3kq4"]
[ext_resource type="Texture2D" uid="uid://da3v31tyit3wu" path="res://GameOver/You_win.png" id="7_08o4d"]
[ext_resource type="AudioStream" uid="uid://me1j4jsi5hen" path="res://Audio/MainMenuSongGJ.wav" id="8_4mpyo"]

[node name="GameWin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og03k")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w0tjb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Text" type="TextureRect" parent="MarginContainer/VBoxContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_08o4d")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Retry" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
texture_normal = ExtResource("3_shpbi")
texture_pressed = ExtResource("4_1d48x")
texture_focused = ExtResource("4_1d48x")

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
texture_normal = ExtResource("5_usopq")
texture_pressed = ExtResource("6_f3kq4")
texture_focused = ExtResource("6_f3kq4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4mpyo")
autoplay = true
max_distance = 50000.0
attenuation = 1.23114e-05

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Retry" to="." method="_on_retry_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Retry" to="." method="_on_retry_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
